Corrected bug in Tomcat setup instructions.